More ideas on future support for classpath, dependencies, etc...
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-sandbox/exec-maven-plugin@796 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/TODO
+++ b/TODO
@@ -2,15 +2,52 @@ After talking with Vincent Massol, decided to change interface to that it accept
  
   <executable>java</executable>
   <arguments>
-    <argument></argument>
+    <argument>-classpath</argument>
+    <classpath/>
+    <argument>mypackage.myclass</argument>
+    <argument>myarg</argument>
+  </arguments>
+
+and
+
+  <executable>java</executable>
+  <arguments>
     <argument>-classpath</argument>
     <classpath>
-      <autocompute>true</autocompute> 
+      <dependency>commons-io:commons-io</dependency>
+      <dependency>....</dependency>
+    </classpath>
+    <argument>mypackage.myclass</argument>
+    <argument>myarg</argument>
+  </arguments>
+
+
+OR (FORMAT NOT YET CHOSEN)
+
+ <executable>java</executable>
+  <arguments>
+    <argument>-classpath</argument>
+    <classpath>
+      <autocompute>true</autocompute>
+    </classpath>
+    <argument>mypackage.myclass</argument>
+    <argument>myarg</argument>
+  </arguments>
+
+and 
+
+  <executable>java</executable>
+  <arguments>
+    <argument>-classpath</argument>
+    <classpath>
       <dependencies>
         <dependency>commons-io:commons-io</dependency>
+        <dependency>....</dependency>
       </dependencies>
     </classpath>
-    <argument></argument>
+    <argument>mypackage.myclass</argument>
+    <argument>myarg</argument>
   </arguments>
+
 
 with support of <dependencies> not in the first phase
