--- a/TODO
+++ b/TODO
@@ -1,69 +1,10 @@
-Classpath Management
---------------------
-
-After talking with Vincent Massol, we decided to change interface to that it accepts something like
- 
-  <executable>java</executable>
-  <arguments>
-    <argument>-classpath</argument>
-    <classpath/>
-    <argument>mypackage.myclass</argument>
-    <argument>myarg</argument>
-  </arguments>
-
-and
-
-  <executable>java</executable>
-  <arguments>
-    <argument>-classpath</argument>
-    <classpath>
-      <dependency>commons-io:commons-io</dependency>
-      <dependency>....</dependency>
-    </classpath>
-    <argument>mypackage.myclass</argument>
-    <argument>myarg</argument>
-  </arguments>
-
-
-OR (FORMAT NOT YET CHOSEN)
-
- <executable>java</executable>
-  <arguments>
-    <argument>-classpath</argument>
-    <classpath>
-      <autocompute>true</autocompute>
-    </classpath>
-    <argument>mypackage.myclass</argument>
-    <argument>myarg</argument>
-  </arguments>
-
-and 
-
-  <executable>java</executable>
-  <arguments>
-    <argument>-classpath</argument>
-    <classpath>
-      <dependencies>
-        <dependency>commons-io:commons-io</dependency>
-        <dependency>....</dependency>
-      </dependencies>
-    </classpath>
-    <argument>mypackage.myclass</argument>
-    <argument>myarg</argument>
-  </arguments>
-
-
-with support of <dependencies> not in the first phase
-
-
-
 Merge with execute?
 -------------------
 
 Should we merge with execute? Not sure. This plugin is about executing programs, not Java classes. 
 Not only the implementation is very different, but the configuration would seem not very compatible.
 
-Nevertheless, I've been asked several time if it could be done. If it was done, here's one way it could end up:
+Nevertheless, I've been asked several time if it could be done. If it was done, here's one way it could end up if one wants to keep the capacity of not creating a process, one has to identify the specified class. This sucks...
 
   <mainClass>com.domain.test.Test</mainClass>
   <arguments>
